# craft

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RULES.md  SOUL.md  justfile  project.py  pyproject.toml  zensical.toml
.claude/: settings.local.json
.claude/commands/: read-pdf.md
.claude/instincts/: README.md
.claude/rules/: architecture.md  autonomous-workflow.md  codex-workflow.md  commands.md  git-workflow.md  project.md  security.md
.codegraph/: .gitignore
.codex/: README.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  docs.yml
api/: __init__.py  error_mapping.py  errors.py  main.py
api/routers/: analyses.py  components.py  configs.py  history.py  merge.py  runs.py  scaffold.py  schema.py  verify.py  veriq_passthrough.py
cli/: _etag.py  _io.py  error_mapping.py  main.py  templates.py
cli/commands/: data.py  instances.py  maintenance.py  runs_analysis.py  schema.py
core/: __init__.py  analysis_cache.py  analysis_runner.py  atomic_write.py  discovery.py  errors.py  instances.py  introspection.py  jobs.py  merge.py  operations.py  paths.py  runs.py  scaffold.py  serialization.py  stubgen.py  toml_formatter.py  toml_io.py  verify.py  veriq_project.py
core/analysis/: __init__.py  runner.py
core/instances/: __init__.py  _common.py  components.py  configs.py
core/io/: __init__.py  atomic_write.py  toml_formatter.py  toml_io.py
core/persistence/: __init__.py  history.py  jobs.py
core/pipeline/: __init__.py  merge.py  scaffold.py  verify.py  veriq_project.py
core/surface_ops/: concurrency.py  operations.py
docs/: concepts.md  index.md  tutorial.md
docs/guide/: analysis.md  satellite-analyses-catalog.md
docs/reference/: api.md  fld.md  mcp.md  traits.md
mcp_server/: __init__.py  error_mapping.py  handlers.py  server.py  tool_factory.py
mcp_server/tools/: analyses.py  components.py  configs.py  history.py  introspection.py  verify.py
plan/Craft/: Craft.md  最終構成.md
schema/: __init__.py  _subclass_helpers.py  analysis.py  common.py  component.py  config.py  fields.py  registry.py  root_model_builder.py  stubgen.py  traits.py
schema/codegen/: __init__.py  root_model_builder.py  stubgen.py
schema/dsl/: __init__.py  config.py  traits.py
src/craft/: __init__.py
subsystems/cdh/: __init__.py  _stubs.pyi  components.py  data.toml  (+1 more)
systems/: __init__.py  common.py  project.py
tests/: conftest.py  test_analyses_api.py  test_analysis_cache.py  test_analysis_runner.py  test_api_merge_scaffold.py  test_atomic_write.py  test_cli.py  test_cli_crud.py  test_components_crud.py  test_concurrency.py  test_cross_scope.py  test_etag.py  test_history.py  test_introspection.py  test_mcp.py  test_merge.py  test_nested_and_explicit_kw.py  test_operations.py  test_registry.py  test_runs_api.py  test_scaffold.py  test_scaffold_modes.py  test_serialization.py  test_stubgen.py  test_subclass_helpers.py  test_trait_protocol.py  test_verify_async.py  test_verify_e2e.py  test_veriq_passthrough.py  test_veriq_project.py
(+335 files in other folders)
