[project]
name = "craft"
version = "0.1.0"
description = "Concept Registry for Automated spacecraFT design"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "veriq>=0.4.2",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "tomli-w>=1.2.0",
    "typer>=0.25.1",
    "mcp>=1.27.1",
    "tomlkit>=0.15.0",
]

[project.scripts]
craft = "cli.main:main"
craft-mcp = "mcp_server.server:main"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.14",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.4.0",
    "zensical>=0.0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schema", "core", "api", "systems", "cli", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    ".venv",
    ".worktrees",
    ".codegraph",
    ".claude/tools",
    "claude-settings",
    "plan",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "N",
]
# B008: FastAPI の Body / Depends / Header を default 値に置くのは推奨パターン
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = [
    "**/.venv/**",
    "**/.worktrees/**",
    "**/.codegraph/**",
    "plan/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
